--- a/tests/html/molerat-color-contrast.html
+++ b/tests/html/molerat-color-contrast.html
@@ -1,10 +1,9 @@
 <html
     data-wcag-test-command="molerat"
     data-wcag-arg-level="'AA'"
-    data-wcag-arg-ignore_hidden="True"
-    data-wcag-arg-staticpath="'./static'">
+    data-wcag-arg-ignore_hidden="True">
     <head>
-        <link rel="stylesheet" href="styles.css" type="text/css">
+        <link rel="stylesheet" href="./static/styles.css" type="text/css">
         <style>
             .black-on-black {
                 /* Tom Haverford would be proud, but this is illegible */
